force-app/main/default/objects/Player__c/fields/Assists__c.field-meta.xml
<CustomField>
    <fullName>Assists__c</fullName>
    <label>Assists</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>