force-app/main/default/objects/Player__c/fields/Blocks__c.field-meta.xml
<CustomField>
    <fullName>Blocks__c</fullName>
    <label>Blocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>