force-app/main/default/objects/Player__c/fields/Rebounds__c.field-meta.xml
<CustomField>
    <fullName>Rebounds__c</fullName>
    <label>Rebounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>