force-app/main/default/objects/Player__c/fields/Steals__c.field-meta.xml
<CustomField>
    <fullName>Steals__c</fullName>
    <label>Steals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>